해준 수정 테스트

--- a/src/main/webapp/WEB-INF/haejun.html
+++ b/src/main/webapp/WEB-INF/haejun.html
@@ -46,7 +46,7 @@
     <div>
     <img src="./memebers_pic/haejun.jpg" alt="오해준의 모습">
     <h1>오해준</h1>
-    <h2>????.??.??</h2>
+    <h2>테스트</h2>
     <p>.</p>
     <p>.</p>
     <p>.</p>
